2004-04-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* FAQ: Updated for gnuplot 4.0.

	* pm3d/README: Updated.

	* lisp/gpelcard.tex: Corrected "pm3d" instead of "mouse".

2004-04-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/version.c: Activate "RELEASE_VERSION" code by inserting a
	#define.
	(HELPMAIL, CONTACT): Provide fall-back definitions.

	* src/show.c (show_version): Update splash text for better
	formatting, and to get of the "pre-release" status.

	* TODO: Lots of small updates.

	* BUGS: Moved one bug from TODO to here.

	* INSTALL.gnu: Updated to more current upstream (FSF) version.

2004-04-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: If gnuplot_x11 dies, or fails to start, then make
	sure all locks on the [now defunct] pipe are cleared.

2004-04-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* PATCHLEVEL: Reset to zero.

	* VERSION: Updated to 4.0 for the release.

	* All over the place: Removed pointers to mailing lists at
	Dartmouth from all source files.  Updated Copyright statements to
	list 2004 as one of the years.  Changed remaining references to
	mailing lists to the new ones as SourceForge.net.
	
	* docs/gpcard.tex: Small updates to reflect at least the major
	changes since 3.7.
	
	* lisp/README.1st: A new file to explain the relation between this
	directory and the stand-alone gnuplot-mode package made by Bruce
	Ravel.

	* lisp/configure.in: Set AC_PREREQ() to 2.52 like in the master
	configure.in, to avoid strange interactions caused by mixed
	autoconf versions.
	
	* tutorial/.cvsignore: Ignore *.toc files, too.

	* term/gd.trm (PNG_options): Bugfix: font options "tiny"
	... "giant" failed to unset the freetype "font" option.

2004-04-12  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (do_system) [!USE_OWN_WINSYSTEM_FUNCTION]: disable
	usage of winsystem(), which apparently causes more trouble than
	it's worth.  To re-enable this, manually #define the