@@ -1,3 +1,13 @@
+2004-04-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/plot.c (get_user_env): Check $USERPROFILE on Windows,
+	before giving up on finding a $HOME.
+
+	* docs/gnuplot.doc (startup, environment): Document the
+	behaviour regarding USERPROFILE.
+
+	* docs/gnuplot.texi: Recreated.
+
 2004-04-14  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* FAQ: Updated for gnuplot 4.0.
